--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,12 +23,12 @@
                     <p class="text-white-50 mb-5">Please enter your login and password!</p>
                     <form action="/login" method="post">
                     <div class="form-outline form-white mb-4">
-                      <input type="text" id="typeEmailX" class="form-control form-control-lg" name="username"/>
+                      <input type="text" id="typeEmailX" class="form-control form-control-lg" name="username" required/>
                       <label class="form-label" for="typeEmailX">Username</label>
                     </div>
       
                     <div class="form-outline form-white mb-4">
-                      <input type="password" id="typePasswordX" class="form-control form-control-lg" name="password"/>
+                      <input type="password" id="typePasswordX" class="form-control form-control-lg" name="password" required/>
                       <label class="form-label" for="typePasswordX">Password</label>
                     </div>
       
