--- a/views/register.ejs
+++ b/views/register.ejs
@@ -42,12 +42,12 @@
                     
                     <form action="/register" method="post">
                     <div class="form-outline form-white mb-4">
-                      <input type="text" id="typeEmailX" class="form-control form-control-lg" name="username" autocomplete="off"/>
+                      <input type="text" id="typeEmailX" class="form-control form-control-lg" name="username" autocomplete="off" required/>
                       <label class="form-label" for="typeEmailX">Username</label>
                     </div>
       
                     <div class="form-outline form-white mb-4">
-                      <input type="password" id="typePasswordX" class="form-control form-control-lg" name="password"/>
+                      <input type="password" id="typePasswordX" class="form-control form-control-lg" name="password" required/>
                       <label class="form-label" for="typePasswordX">Password</label>
                     </div>
       
